crates/ink/tests/ui/contract/fail/trait/trait-message-selector-overlap-2.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<1518209067>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait/trait-message-selector-overlap-2.rs:43:9
   |
38 |         fn message(&self) {}
   |         -------------------- first implementation here
...
43 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `TraitCallForwarderFor<1518209067>` for type `contract::_::CallBuilder<ink::abi::Ink>`
  --> tests/ui/contract/fail/trait/trait-message-selector-overlap-2.rs:41:5
   |
36 | /     impl TraitDefinition1 for Contract {
37 | |         #[ink(message)]
38 | |         fn message(&self) {}
39 | |     }
   | |_____- first implementation here
40 |
41 | /     impl TraitDefinition2 for Contract {
42 | |         #[ink(message)]
43 | |         fn message(&self) {}
44 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder<ink::abi::Ink>`
